docs minor change

--- a/docs/docs/components/tabs.mdx
+++ b/docs/docs/components/tabs.mdx
@@ -225,7 +225,7 @@ export const App = () => {
 | onChange     |                           `(selectedTabObject)=>void`                            |   `()=>{}`    |        Yes |
 | grow         |                      grows to fit the containter `boolean`                       |    `false`    |        Yes |
 | height       |                                     `string`                                     |    `40px`     |        Yes |
-| tabsData     |                           `Array of` **_Tab Object_**                            |               |         No |
+| tabsData     |                           `Array of` **_Tabs Object_**                           |               |         No |
 | children     |  _ not a prop but children to the `<Tabs/>`_ <br/> `(selectedTabObject)=> JSX `  |               |         No |
 
 ### Tabs Object
