--- a/docs/docs/components/tabs.mdx
+++ b/docs/docs/components/tabs.mdx
@@ -12,11 +12,11 @@ import { Tabs } from "@hover-design/react";
 
 ### Code Snippets and Examples
 
-##### Tabs Default
-
 import "@hover-design/react/dist/style.css";
 import { Tabs } from "@hover-design/react";
 import { useState } from "react";
+
+##### Tabs Default
 
 ```jsx
 const tabsData = [
@@ -53,6 +53,282 @@ const tabsData = [
 
 <Tabs
   defaultValue={"first"}
+  tabsData={[
+    {
+      label: "First",
+      value: "first",
+    },
+    {
+      label: "Second",
+      value: "second",
+      disabled: true,
+    },
+    {
+      label: "Third",
+      value: "third",
+      icon: (
+        <div
+          style={{
+            border: "1px solid black",
+            borderRadius: "50%",
+            height: "16px",
+            width: "16px",
+            display: "flex",
+            alignItems: "center",
+            justifyContent: "center",
+          }}
+        >
+          O
+        </div>
+      ),
+    },
+    {
+      label: "Fourth",
+      value: "fourth",
+      icon: (
+        <div
+          style={{
+            border: "1px solid black",
+            borderRadius: "50%",
+            height: "16px",
+            width: "16px",
+            display: "flex",
+            alignItems: "center",
+            justifyContent: "center",
+          }}
+        >
+          O
+        </div>
+      ),
+      badge: "13",
+    },
+  ]}
+>
+  {(selectedTab) => <div>{selectedTab?.label}</div>}
+</Tabs>
+
+##### Tabs Vertical
+
+```jsx
+const tabsData = [
+  {
+    label: "First",
+    value: "first",
+  },
+  {
+    label: "Second",
+    value: "second",
+    disabled: true,
+  },
+  {
+    label: "Third",
+    value: "third",
+    icon: <div style={icon}>O</div>,
+  },
+  {
+    label: "Fourth",
+    value: "fourth",
+    icon: <div style={icon}>O</div>,
+    badge: "13",
+  },
+];
+
+<div className="App">
+  <Tabs defaultValue={"first"} orientation={"vertical"} tabsData={tabsData}>
+    {(selectedTab) => <div>{selectedTab.label}</div>}
+  </Tabs>
+</div>;
+```
+
+> **_(selectedTab)_** contains the whole tab object which is selected.
+
+<Tabs
+  defaultValue={"first"}
+  orientation={"vertical"}
+  tabsData={[
+    {
+      label: "First",
+      value: "first",
+    },
+    {
+      label: "Second",
+      value: "second",
+      disabled: true,
+    },
+    {
+      label: "Third",
+      value: "third",
+      icon: (
+        <div
+          style={{
+            border: "1px solid black",
+            borderRadius: "50%",
+            height: "16px",
+            width: "16px",
+            display: "flex",
+            alignItems: "center",
+            justifyContent: "center",
+          }}
+        >
+          O
+        </div>
+      ),
+    },
+    {
+      label: "Fourth",
+      value: "fourth",
+      icon: (
+        <div
+          style={{
+            border: "1px solid black",
+            borderRadius: "50%",
+            height: "16px",
+            width: "16px",
+            display: "flex",
+            alignItems: "center",
+            justifyContent: "center",
+          }}
+        >
+          O
+        </div>
+      ),
+      badge: "13",
+    },
+  ]}
+>
+  {(selectedTab) => <div>{selectedTab?.label}</div>}
+</Tabs>
+
+##### Tabs Variants - Outline
+
+```jsx
+const tabsData = [
+  {
+    label: "First",
+    value: "first",
+  },
+  {
+    label: "Second",
+    value: "second",
+    disabled: true,
+  },
+  {
+    label: "Third",
+    value: "third",
+    icon: <div style={icon}>O</div>,
+  },
+  {
+    label: "Fourth",
+    value: "fourth",
+    icon: <div style={icon}>O</div>,
+    badge: "13",
+  },
+];
+
+<div className="App">
+  <Tabs defaultValue={"first"} variant={"outline"} tabsData={tabsData}>
+    {(selectedTab) => <div>{selectedTab.label}</div>}
+  </Tabs>
+</div>;
+```
+
+> **_(selectedTab)_** contains the whole tab object which is selected.
+
+<Tabs
+  defaultValue={"first"}
+  variant={"outline"}
+  tabsData={[
+    {
+      label: "First",
+      value: "first",
+    },
+    {
+      label: "Second",
+      value: "second",
+      disabled: true,
+    },
+    {
+      label: "Third",
+      value: "third",
+      icon: (
+        <div
+          style={{
+            border: "1px solid black",
+            borderRadius: "50%",
+            height: "16px",
+            width: "16px",
+            display: "flex",
+            alignItems: "center",
+            justifyContent: "center",
+          }}
+        >
+          O
+        </div>
+      ),
+    },
+    {
+      label: "Fourth",
+      value: "fourth",
+      icon: (
+        <div
+          style={{
+            border: "1px solid black",
+            borderRadius: "50%",
+            height: "16px",
+            width: "16px",
+            display: "flex",
+            alignItems: "center",
+            justifyContent: "center",
+          }}
+        >
+          O
+        </div>
+      ),
+      badge: "13",
+    },
+  ]}
+>
+  {(selectedTab) => <div>{selectedTab?.label}</div>}
+</Tabs>
+
+##### Tabs Variants - Pill
+
+```jsx
+const tabsData = [
+  {
+    label: "First",
+    value: "first",
+  },
+  {
+    label: "Second",
+    value: "second",
+    disabled: true,
+  },
+  {
+    label: "Third",
+    value: "third",
+    icon: <div style={icon}>O</div>,
+  },
+  {
+    label: "Fourth",
+    value: "fourth",
+    icon: <div style={icon}>O</div>,
+    badge: "13",
+  },
+];
+
+<div className="App">
+  <Tabs defaultValue={"first"} variant={"pill"} tabsData={tabsData}>
+    {(selectedTab) => <div>{selectedTab.label}</div>}
+  </Tabs>
+</div>;
+```
+
+> **_(selectedTab)_** contains the whole tab object which is selected.
+
+<Tabs
+  defaultValue={"first"}
+  variant={"pill"}
   tabsData={[
     {
       label: "First",
@@ -216,24 +492,30 @@ export const App = () => {
 
 ### Props Reference
 
-| Attributes   |                                      Values                                      | Default Value | Optional ? |
-| :----------- | :------------------------------------------------------------------------------: | :-----------: | ---------: |
-| defaultValue | _ must be equal to value from ** Tabs Object ** _ <br/> `string` &#124; `number` |               |        Yes |
-| value        | _ must be equal to value from ** Tabs Object ** _ <br/> `string` &#124; `number` |               |        Yes |
-| color        |                                     `string`                                     |   `#2F80ED`   |        Yes |
-| background   |                                     `string`                                     |   `#d7e9ff`   |        Yes |
-| onChange     |                           `(selectedTabObject)=>void`                            |   `()=>{}`    |        Yes |
-| grow         |                      grows to fit the containter `boolean`                       |    `false`    |        Yes |
-| height       |                                     `string`                                     |    `40px`     |        Yes |
-| tabsData     |                           `Array of` **_Tabs Object_**                           |               |         No |
-| children     |  _ not a prop but children to the `<Tabs/>`_ <br/> `(selectedTabObject)=> JSX `  |               |         No |
+| Attributes      |                                      Values                                      | Default Value | Optional ? |
+| :-------------- | :------------------------------------------------------------------------------: | :-----------: | ---------: |
+| defaultValue    | _ must be equal to value from ** Tabs Object ** _ <br/> `string` &#124; `number` |               |        Yes |
+| value           | _ must be equal to value from ** Tabs Object ** _ <br/> `string` &#124; `number` |               |        Yes |
+| orientation     |                          `horizontal` &#124; `vertical`                          | `horizontal`  |        Yes |
+| variant         |                     `default` &#124; `outline` &#124; `pill`                     |   `default`   |        Yes |
+| color           |                                     `string`                                     |   `#2F80ED`   |        Yes |
+| backgroundColor |                                     `string`                                     |   `#d7e9ff`   |        Yes |
+| outlineColor    |                                     `string`                                     |   `#EBECF0`   |        Yes |
+| textAlign       |                       `left` &#124; `center`&#124; `right`                       |   `center`    |        Yes |
+| roundness       |                                     `string`                                     |     `4px`     |        Yes |
+| onChange        |                           `(selectedTabObject)=>void`                            |   `()=>{}`    |        Yes |
+| grow            |                      grows to fit the containter `boolean`                       |    `false`    |        Yes |
+| height          |                                     `string`                                     |    `40px`     |        Yes |
+| tabsData        |                           `Array of` **_Tabs Object_**                           |               |         No |
+| children        |  _ not a prop but children to the `<Tabs/>`_ <br/> `(selectedTabObject)=> JSX `  |               |         No |
 
 ### Tabs Object
 
-| Key      |             type              | Optional ? |
-| :------- | :---------------------------: | ---------: |
-| label    |           `string`            |         No |
-| value    |   `string` &#124; `number`    |         No |
-| icon     |         `JSX Element`         |        Yes |
-| disabled |           `boolean`           |        Yes |
-| badge    | `string` &#124; `JSX Element` |        Yes |
+| Key      |                type                | Optional ? |
+| :------- | :--------------------------------: | ---------: |
+| label    |              `string`              |         No |
+| value    |      `string` &#124; `number`      |         No |
+| icon     |           `JSX Element`            |        Yes |
+| disabled |             `boolean`              |        Yes |
+| badge    |   `string` &#124; `JSX Element`    |        Yes |
+| ref      | `MutableRefObject<HTMLDivElement>` |        Yes |
