move global styles and update docs

--- a/docs/docs/components/table.mdx
+++ b/docs/docs/components/table.mdx
@@ -18,6 +18,7 @@ import {
   Flex,
 } from "@hover-design/react";
 import { resetTableStyles } from "../../src/components/examples/resetTableStyles.css.ts";
+import "../../src/components/examples/global.styles.css.ts";
 
 ```jsx
 import {
