--- a/docs/docs/components/dialog.mdx
+++ b/docs/docs/components/dialog.mdx
@@ -2,7 +2,7 @@
 
 ### Quick start
 
-Here's a quick start guide to get started with the modal component
+Here's a quick start guide to get started with the dialog component
 
 ### Importing Component
 
@@ -52,7 +52,7 @@ function Demo() {
 
 ##### Customizing Dialog
 
-You can customize the base and overlay styles of the modal by passing in the baseStyles and overlayStyles props. Refer this Spec for this:
+You can customize the base styles of the dialog by passing in the `styles` props. Refer this table for its values:
 
 styles
 
