refactor: Resolved git comments

--- a/docs/docs/components/radio.mdx
+++ b/docs/docs/components/radio.mdx
@@ -188,6 +188,6 @@ disabledStyles
 | Key         |              type               | Optional? |
 | :---------- | :-----------------------------: | --------: |
 | children    |        `React.ReactNode`        |        No |
-| Spacing     | `xs` `sm` `md` `lg` `xl` string |       Yes |
+| spacing     | `xs` `sm` `md` `lg` `xl` string |       Yes |
 | orientation |     `verticle` `horizontal`     |       Yes |
 | ref         | `RefObject<HTMLButtonElement>;` |       Yes |
