--- a/docs/docs/components/input.mdx
+++ b/docs/docs/components/input.mdx
@@ -2,7 +2,7 @@
 
 ### Quick start
 
-Here's a quick start guide to get started with the button component
+Here's a quick start guide to get started with the input component
 
 ### Importing Component
 
@@ -94,7 +94,7 @@ import { Input, Label, Flex } from "@hover-design/react";
 
 ```jsx
 <div className="App">
-  <Input Icon={<TwitterIconSvg />} />
+  <Input iconPosition={"left"} Icon={<TwitterIconSvg />} />
 </div>
 ```
 
