--- a/docs/docs/components/select.mdx
+++ b/docs/docs/components/select.mdx
@@ -279,7 +279,7 @@ const options = [
 
 | Key       |                      type                      |
 | :-------- | :--------------------------------------------: |
-| Space     |                 Opens DropDown                 |
+| Space     |              `Opens Options List`              |
 | ArrowDown |                 `Next Option`                  |
 | ArrowUp   |               `Previous Option`                |
 | Home      | _ if not **disabled ** _ <br/> `First Option ` |
