--- a/docs/docs/components/select.mdx
+++ b/docs/docs/components/select.mdx
@@ -240,7 +240,7 @@ const options = [
 />
 <br />
 
-> Note: All the above mentioned combinations Eg. Searchable, Cleareable etc...are also present with MultiSelect
+> Note: All the above mentioned combinations Eg. Searchable, Cleareable, Disabled etc...are also present with MultiSelect
 
 ### Props Reference
 
