more controls added

--- a/docs/docs/components/select.mdx
+++ b/docs/docs/components/select.mdx
@@ -284,3 +284,4 @@ const options = [
 | ArrowUp   |               `Previous Option`                |
 | Home      | _ if not **disabled ** _ <br/> `First Option ` |
 | End       |  _ if not **disabled ** _ <br/> `Last Option`  |
+| Backspace |  _ if **isMulti ** _ <br/> `Clears last pill`  |
