--- a/docs/docs/components/select.mdx
+++ b/docs/docs/components/select.mdx
@@ -277,11 +277,11 @@ const options = [
 
 > Keyboard controls will only work when the ** Select ** is focused (selected)
 
-| Key       |                         type                          |
-| :-------- | :---------------------------------------------------: |
-| Space     |                 `Opens Options List`                  |
-| ArrowDown |                     `Next Option`                     |
-| ArrowUp   |                   `Previous Option`                   |
-| Home      |    _ if not **disabled ** _ <br/> `First Option `     |
-| End       |     _ if not **disabled ** _ <br/> `Last Option`      |
-| Backspace | _ if **isMulti ** _ <br/> `Clears last selected pill` |
+| Key       |                           type                            |
+| :-------- | :-------------------------------------------------------: |
+| Space     |                   `Opens Options List`                    |
+| ArrowDown |                       `Next Option`                       |
+| ArrowUp   |                     `Previous Option`                     |
+| Home      |      _ if not **disabled ** _ <br/> `First Option `       |
+| End       |       _ if not **disabled ** _ <br/> `Last Option`        |
+| Backspace | _ if **isMulti ** _ <br/> `Clears the last selected pill` |
