--- a/docs/docs/components/input.mdx
+++ b/docs/docs/components/input.mdx
@@ -94,7 +94,7 @@ import { Input, Label, Flex } from "@hover-design/react";
 
 ```jsx
 <div className="App">
-  <Input Icon={<TwitterIconSvg />} iconPosition={"left"} />
+  <Input Icon={<TwitterIconSvg />} iconPosition="left" />
 </div>
 ```
 
