--- a/docs/docs/components/checkbox.mdx
+++ b/docs/docs/components/checkbox.mdx
@@ -1,8 +1,8 @@
-# Radio
+# Checkbox
 
 ### Quick start
 
-Here's a quick start guide to get started with the Radio component, Radios are for selecting one option from many.
+Here's a quick start guide to get started with the Checkbox component, Checkboxes are for selecting one or several options in a list.
 
 ### Importing Component
 
@@ -145,49 +145,62 @@ const Demo = () => {
   />
 </RadioContainer>
 
-### Radio Props Reference
+### Checkbox Props Reference
 
-| Key            |              type               | Optional? |
-| :------------- | :-----------------------------: | --------: |
-| value          |            `string;`            |        No |
-| name           |            `string;`            |        No |
-| radioSize      | `xs` `sm` `md` `lg` `xl` string |       Yes |
-| isDisabled     |            `boolean`            |       Yes |
-| baseStyles     |       `baseStyles object`       |       Yes |
-| disabledStyles |     `disabledStyles object`     |       Yes |
-| selectedStyles |     `selectedStyles object`     |       Yes |
+| Key                 |              type               | Optional? |
+| :------------------ | :-----------------------------: | --------: |
+| value               |            `string;`            |        No |
+| name                |            `string;`            |        No |
+| id                  |            `string;`            |        No |
+| indeterminate       |           `boolean;`            |        No |
+| isDisabled          |            `boolean`            |       Yes |
+| checkboxSize        | `xs` `sm` `md` `lg` `xl` string |       Yes |
+| borderRadius        | `xs` `sm` `md` `lg` `xl` string |       Yes |
+| icon                |        `React.ReactNode`        |       Yes |
+| baseStyles          |       `baseStyles object`       |       Yes |
+| disabledStyles      |     `disabledStyles object`     |       Yes |
+| selectedStyles      |     `selectedStyles object`     |       Yes |
+| indeterminateStyles |  `indeterminateStyles object`   |       Yes |
 
-##### Customizing Radio Base, Selected and Disabled
+##### Customizing Checkbox Base, Selected, Indeterminate and Disabled Styles.
 
-You can customize the base, selected and disabled styles of the radio by passing in the baseStyles, selectedStyles and disabledStyles props. Refer this Spec for this:
+You can customize the base, selected and disabled styles of the checkbox by passing in the baseStyles, selectedStyles, indeterminateStyles and disabledStyles props. Refer this Spec for this:
 
 baseStyles
 
-| Property        | Description         | Default            |
-| --------------- | ------------------- | ------------------ |
-| backgroundColor | Background of Radio | rgb(250, 250, 250) |
-| borderColor     | Border Color        | rgb(204, 204, 204) |
+| Property        | Description            | Default            |
+| --------------- | ---------------------- | ------------------ |
+| backgroundColor | Background of Checkbox | rgb(250, 250, 250) |
+| borderColor     | Border Color           | rgb(204, 204, 204) |
 
 selectedStyles
 
-| Property        | Description                    | Default            |
-| --------------- | ------------------------------ | ------------------ |
-| backgroundColor | Selected Radio BackgroundColor | rgb(250, 250, 250) |
-| borderColor     | Selected Border Color          | rgb(204, 204, 204) |
+| Property        | Description                       | Default            |
+| --------------- | --------------------------------- | ------------------ |
+| color           | Selected Checkbox Color           | rgb(250, 250, 250) |
+| backgroundColor | Selected Checkbox BackgroundColor | rgb(25, 113, 194)  |
+| borderColor     | Selected Border Color             | rgb(25, 113, 194)  |
+
+indeterminateStyles
+
+| Property        | Description                       | Default            |
+| --------------- | --------------------------------- | ------------------ |
+| color           | Disabled Checkbox Color           | rgb(250, 250, 250) |
+| backgroundColor | Disabled Checkbox BackgroundColor | rgb(25, 113, 194)  |
+| borderColor     | Disabled Checkbox Border Color    | rgb(25, 113, 194)  |
 
 disabledStyles
 
-| Property        | Description                    | Default            |
-| --------------- | ------------------------------ | ------------------ |
-| color           | Disabled Radio Color           | rgb(250, 250, 250) |
-| backgroundColor | Disabled Radio BackgroundColor | rgb(250, 128, 5)   |
-| borderColor     | Disabled Radio Border Color    | rgb(174, 68, 10)   |
+| Property        | Description                       | Default            |
+| --------------- | --------------------------------- | ------------------ |
+| backgroundColor | Disabled Checkbox BackgroundColor | rgb(227, 227, 227) |
+| borderColor     | Disabled Checkbox Border Color    | rgb(204, 204, 204) |
 
-### RadioGroup Props Reference
+### CheckboxGroup Props Reference
 
 | Key         |              type               | Optional? |
 | :---------- | :-----------------------------: | --------: |
 | children    |        `React.ReactNode`        |        No |
 | spacing     | `xs` `sm` `md` `lg` `xl` string |       Yes |
-| orientation |     `vertical` `horizontal`     |       Yes |
+| orientation |     `verticle` `horizontal`     |       Yes |
 | ref         | `RefObject<HTMLButtonElement>;` |       Yes |
