docs: custom styles added

--- a/docs/docs/components/popover.mdx
+++ b/docs/docs/components/popover.mdx
@@ -172,3 +172,12 @@ const content = (
 | :----------------- | :-------------------: |
 | Space &#124; Enter | `Toggle Opened State` |
 | Tab                |      `Navigate`       |
+
+### Custom styles
+
+> **Note**: It is advised that you scope these classNames inside your custom className given as a prop to the Popover component
+
+| ClassName                |            Element             |
+| :----------------------- | :----------------------------: |
+| `.hover-popover-content` | `Container to Popover Content` |
+| `.hover-popover-target ` | `Container to Popover Target`  |
