--- a/docs/docs/components/breadcrumb.mdx
+++ b/docs/docs/components/breadcrumb.mdx
@@ -14,38 +14,34 @@ import { Breadcrumb } from "@hover-design/react";
 
 ### Code Snippets and Examples
 
-##### Breadcrumb Default
-
 import "@hover-design/react/dist/style.css";
 import { Breadcrumb } from "@hover-design/react";
 
-
 ```jsx
-<div className="App">
-  <Breadcrumb>
-    <Breadcrumb.Item>Home</Breadcrumb.Item>
-    <Breadcrumb.Item href="">
-      Application Center
-    </Breadcrumb.Item>
-    <Breadcrumb.Item>
-      <a href="">Application List</a>
-    </Breadcrumb.Item>
-    <Breadcrumb.Item>An Application</Breadcrumb.Item>
-  </Breadcrumb>
-</div>
+onst App = () => {
+  const list = [
+    { title: "Hover" },
+    { title: "Components", href: "#" },
+    { title: "Docs", href: "#" },
+  ];
+  return (
+    <div className="App">
+      <Breadcrumb crumbs={list} separator={"/"} />
+    </div>
+  );
+};
 ```
-### Breadcrumb 
 
+### Breadcrumb
 
-### Breadcrumb.Item
-| Property  | Description                          | Type                   | Default	Version |
-| :-------- | :-----------------------------       | :---                   | :-------------  |
-| className	|The additional css class	             | string                 |	       -        |
-|href	      |Target of hyperlink                   | string	                |        -	      |
-|onClick	  |Set the handler to handle click event |	(e:MouseEvent) => void|             	-	|
+| Property  | Description              | Type                | Default Version |
+| :-------- | :----------------------- | :------------------ | :-------------- |
+| className | The additional css class | string              | -               |
+| crumbs    | List of Breadcrumbs      | Array[crumb]        | -               |
+| separator | Separator between links  | string or ReactNode | -               |
 
+### crumbs
 
-### Breadcrumb.Separator
-|Property	| Description	   | Type       | Default	Version |
-| :------ | :------------- | :----------| :-------------- |
-|children	|Custom separator|	ReactNode	|  `/`            |	
+| Property | Description                               | Type   | Default Version |
+| :------- | :---------------------------------------- | :----- | :-------------- |
+| crumb    | Object with title(must) & href properties | Object |                 |
