--- a/docs/docs/components/breadcrumb.mdx
+++ b/docs/docs/components/breadcrumb.mdx
@@ -38,7 +38,7 @@ onst App = () => {
 | :-------- | :----------------------- | :------------------ | :-------------- |
 | className | The additional css class | string              | -               |
 | crumbs    | List of Breadcrumbs      | Array[crumb]        | -               |
-| separator | Separator between links  | string or ReactNode | -               |
+| separator | Separator between links  | string or ReactNode | `/`             |
 
 ### crumbs
 
