Banner Component Ready

--- a/docs/docs/components/alert.mdx
+++ b/docs/docs/components/alert.mdx
@@ -99,12 +99,12 @@ import { Alert } from "@hover-design/react";
 
 ```jsx
 <Alert title="Custom Colors" color="hotpink" backgroundColor="lavenderblush">
-  This is an Info Alert
+  This is a Customized Alert
 </Alert>
 ```
 
 <Alert title="Custom Colors" color="hotpink" backgroundColor="lavenderblush">
-  This is an Info Alert
+  This is an Customized Alert
 </Alert>
 
 ##### Alert - with Close Button
